# cheese-paper-testing

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
scripts/: manuskript_converter.py
src/: default_text.rs  main.rs
src/components/: file_objects.rs  mod.rs  project.rs  schema.rs  test.rs  text.rs
src/components/file_objects/: base.rs  base_file_object.rs  character.rs  folder.rs  mod.rs  place.rs  reference.rs  scene.rs  tools.rs  utils.rs
src/components/file_objects/base/: implementation.rs
src/components/schema/: tools.rs
src/schemas/: default.rs  mod.rs  overthinker.rs  test.rs
src/schemas/default/: character.rs  folder.rs  place.rs  scene.rs
src/schemas/overthinker/: character.rs  folder.rs  note.rs  scene.rs  section.rs
src/tiny_markdown/: mod.rs  tiny_markdown_highlighter.rs  tiny_markdown_parser.rs
src/ui/: base_text_editor.rs  character_editor.rs  editor_base.rs  file_object_editor.rs  folder_editor.rs  metrics.rs  mod.rs  place_editor.rs  prelude.rs  project_editor.rs  project_tracker.rs  render_data.rs  scene_editor.rs  scene_text_editor.rs  settings.rs  text_box.rs  tiny_markdown_highlighter.rs
src/ui/project_editor/: action.rs  file_object_editor.rs  file_tree.rs  page.rs  project_metadata_editor.rs  search.rs  util.rs
src/ui/project_editor/file_object_editor/: character_editor.rs  folder_editor.rs  place_editor.rs  scene_editor.rs
src/ui/project_editor/page/: export_selection.rs  file_object_editor.rs  project_metadata_editor.rs
src/ui/project_editor/page/file_object_editor/: character_editor.rs  folder_editor.rs  place_editor.rs  scene_editor.rs
src/ui/project_editor/search/: global_search.rs  textbox_search.rs
src/ui/settings/: settings_page.rs  theme.rs
src/ui/text_box/: base.rs  format.rs  mod.rs  old_format.rs  spellcheck.rs
src/util/: error.rs  mod.rs
